Improved build using Java 9+ versions.