@@ -30,6 +30,58 @@
 
     <artifactId>gocypher-cybench-annotations</artifactId>
 
+    <profiles>
+        <profile>
+            <id>java9-plus</id>
+            <activation>
+                <jdk>[9.0,)</jdk>
+            </activation>
+            <properties>
+                <project.java.version>${java.specification.version}</project.java.version>
+                <java.source.version>${project.java.version}</java.source.version>
+                <java.target.version>${project.java.version}</java.target.version>
+                <java.compiler.version>${project.java.version}</java.compiler.version>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.1</version>
+                        <configuration>
+                            <verbose>${java.compiler.verbose}</verbose>
+                            <compilerVersion>${java.compiler.version}</compilerVersion>
+                            <source>${java.source.version}</source>
+                            <target>${java.target.version}</target>
+                            <debuglevel>${java.compiler.debuglevel}</debuglevel>
+                            <compilerArgs>
+                                <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                <arg>--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                <arg>--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>up-to-java9</id>
+            <activation>
+                <jdk>(,9.0)</jdk>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>com.sun</groupId>
+                    <artifactId>tools</artifactId>
+                    <version>${project.java.version}</version>
+                    <scope>system</scope>
+                    <systemPath>${java.home}/../lib/tools.jar</systemPath>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>com.google.auto.service</groupId>
@@ -41,11 +93,6 @@
             <groupId>com.github.javaparser</groupId>
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.20.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.olivergondza</groupId>
-            <artifactId>maven-jdk-tools-wrapper</artifactId>
-            <version>0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
